feat: add SEO meta tags, OG image, favicon & PWA icons, Google verification, and upgrade contact form

--- a/index.html
+++ b/index.html
@@ -1,10 +1,57 @@
 <!doctype html>
-<html lang="en">
+<html lang="en-ZA">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kamogau-site</title>
+
+    <title>Kamogau Transport & Projects | Industrial Contracting, Engineering & Maintenance</title>
+
+    <meta
+      name="description"
+      content="Kamogau Transport & Projects provides industrial contracting, engineering, maintenance, and supply & delivery services for energy, mining, manufacturing, and infrastructure projects across South Africa."
+    />
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://kamogauprojects.co.za/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Kamogau Transport & Projects" />
+    <meta property="og:title" content="Industrial Contracting | Kamogau Transport & Projects" />
+    <meta
+      property="og:description"
+      content="Industrial contracting, engineering, maintenance, and supply & delivery for large-scale projects across South Africa."
+    />
+    <meta property="og:url" content="https://kamogauprojects.co.za/" />
+    <meta property="og:image" content="https://kamogauprojects.co.za/og-image.png" />
+    <meta property="og:locale" content="en_ZA" />
+
+    <!-- Icons -->
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Kamogau Transport & Projects",
+        "url": "https://kamogauprojects.co.za/",
+        "image": "https://kamogauprojects.co.za/og-image.png",
+        "telephone": "+27 (0)79 752 7824",
+        "email": "mathobelast@gmail.com",
+        "areaServed": "South Africa",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "54 Classical Heights, Highveld Park, Gordon Road",
+          "addressLocality": "eMalahleni",
+          "postalCode": "1035",
+          "addressCountry": "ZA"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
